--- a/nextlevel.html
+++ b/nextlevel.html
@@ -29,26 +29,22 @@
                 <a href="nextlevel.html">firt</a>
             </li>
         </ul>    
-    </nav>-->
+    </nav-->
 
     <header>
         <div>
-            <a href="nextlevel.html"><img 
+            <img 
             src="https://github.com/GabrielLima-M.png" 
-            alt="Imagem do Yeo Woon do Manhwa Nano Machine"></a>
-
-            
+            alt="Imagem do Yeo Woon do Manhwa Nano Machine">
         </div>
 
-        <div class="casimiro">
-            <a href="../p2/p2.html">
-                <img 
-                src="https://static-cdn.jtvnw.net/jtv_user_pictures/32805a78-d927-48bd-8089-bf5efed53ea4-profile_image-50x50.png" 
-                alt="Imagem do Casimiro">
-            </a>
-
-            
-        </div>
+        <!--<div class="casimiro">
+            <link rel="stylesheet" href="../p2/p2.html">
+            <link rel="import" href="component.html">
+            <img 
+            src="https://static-cdn.jtvnw.net/jtv_user_pictures/32805a78-d927-48bd-8089-bf5efed53ea4-profile_image-50x50.png" 
+            alt="Imagem do Casimiro">
+        </div>-->
     </header>
 
     <main>
